# reservoir_computer

./: .gitignore  Cargo.toml  README.md  doublescroll_soln.csv
classic-rcs/: Cargo.toml
classic-rcs/src/: activation.rs  esn.rs  esn_constructor.rs  eusn.rs  eusn_constructor.rs  lib.rs  params.rs  rc.rs  rc_trait.rs  reservoir_constructor.rs  temporal_prediction_aggregator.rs
common/: Cargo.toml
common/src/: activation.rs  lib.rs  load_trade_data.rs  rc_trait.rs
common/src/environments/: env_mackey_glass.rs  env_trades.rs  mod.rs
examples/: doublescroll.rs  load_sample_data.rs  mackey_glass.rs  main.rs  sine.rs  trades.rs  trades_sliding_window.rs
examples/doublescroll/: Cargo.toml
examples/doublescroll/src/: main.rs
examples/environments/: env_mackey_glass.rs  env_trades.rs  mod.rs
examples/mackey_glass/: Cargo.toml
examples/mackey_glass/src/: main.rs
examples/plot/: gif_render.rs  gif_render_optimizer.rs  mod.rs  plot.rs
examples/sine/: Cargo.toml
examples/sine/src/: main.rs
examples/trades/: Cargo.toml
examples/trades/src/: main.rs
examples/trades_sliding_window/: Cargo.toml
examples/trades_sliding_window/src/: main.rs
lin-reg/: Cargo.toml
lin-reg/src/: lib.rs  tikhonov_regularization.rs
next-generation-rcs/: Cargo.toml
next-generation-rcs-arrayfire/: Cargo.toml
next-generation-rcs-arrayfire/examples/: main.rs  sine.rs
next-generation-rcs-arrayfire/src/: activation.rs  lib.rs  ngrc.rs  params.rs
next-generation-rcs/src/: feature_constructor_hengrc.rs  feature_constructor_ngrc.rs  lib.rs  mod.rs  ngrc.rs  params.rs  rc_trait.rs
optimizers/: Cargo.toml
optimizers/src/: firefly.rs  lib.rs  mod.rs  opt_firefly.rs  opt_random_search.rs  random_search.rs
plot/: Cargo.toml
plot/src/: plot.rs
rc-plot/: Cargo.toml
rc-plot/src/: gif_render.rs  gif_render_optimizer.rs  lib.rs  plot.rs  plot_gather.rs
src/: activation.rs  ensemble.rs  errors.rs  esn.rs  euler_state_network.rs  firefly_optimizer.rs  lib.rs  load_sample_data.rs  main.rs  plot.rs  rc.rs  reservoir.rs  tikhonov_regularization.rs  utils.rs
src/environments/: env_doublescroll.rs  env_mackey_glass.rs  env_trades.rs  environment_trades.rs  mod.rs
src/experiments/: doublescroll.rs  mackey_glass.rs  mackey_glass_eusn.rs  mod.rs  sine.rs  trades.rs  trades_eusn.rs  trades_sliding_window.rs
src/experiments/trades/: gif_render.rs  gif_render_firefly.rs  mod.rs  trades.rs  trades_eusn.rs  trades_sliding_window.rs
src/lin_reg/: mod.rs  tikhonov_regularization.rs
src/opt_firefly/: environment_trades.rs  environment_trait.rs  firefly_optimizer.rs  mod.rs
src/optimizers/: environment_trades.rs  environment_trait.rs  mod.rs  opt_firefly.rs  opt_random_search.rs
src/plot/: gif_render_optimizer.rs  mod.rs
src/reservoir_computers/: esn.rs  eusn.rs  mod.rs  next_generation_rc.rs  ngrc.rs  rc_trait.rs
