[workspace]
members = [
  "classic-rcs",
  "next-generation-rcs",
  "optimizers",
  "lin-reg",
  "rc-plot",
  "common",
  "examples/sine",
  "examples/mackey_glass",
  "examples/doublescroll",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mathis Wellmann <wellmannmathis@gmail.com"]
license = "GNU AGPLv3"
publish = false

[workspace.dependencies]
log = "0.4.18"
pretty_env_logger = "0.5.0"
nalgebra = "0.32.2"
dialoguer = "0.10.4"
plotters = "0.3.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "unwind"
