[package]
name = "classic-rcs"
version = "0.13.0"
edition = "2021"
authors = ["Mathis Wellmann <wellmannmathis@gmail.com"]
license = "GNU AGPLv3"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.14"
pretty_env_logger = "^0.4"
csv = "^1.1.6"
plotters = "^0.3.1"
thiserror = "^1"
nalgebra = { version = "^0.31.0", features = ["sparse"]}
nanorand = "^0.7"
dialoguer = "^0.10.0"
num = "^0.4"
num_cpus = "^1.13.1"
threadpool = "^1.0"
crossbeam = "^0.8.1"

sliding_features = "2.5.0"
trade_aggregation = "1.0.5"

# Local deps
lin-reg = { version = "^0.1.0", path = "../lin-reg" }
common = { version = "^0.1.0", path = "../common" }

[dev-dependencies]
round = "^0.1.2"