[package]
name = "classic-rcs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
dialoguer.workspace = true
plotters.workspace = true
nalgebra = { workspace = true, features = ["sparse"] }
thiserror = "^1"
nanorand = "^0.7"
num = "^0.4"

sliding_features = "2.5.0"
trade_aggregation = "1.0.5"

# Local deps
lin-reg = { path = "../lin-reg" }
common = { path = "../common" }

[dev-dependencies]
round = "^0.1.2"
