[package]
name = "common"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "^0.31"

# Local deps
lin-reg = { version = "^0.1", path = "../lin-reg" }

rc-plot = { version = "^0.1", path = "../rc-plot", optional = true }

[features]
environments = ["rc-plot"]
