[package]
name = "common"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "^0.31"
csv = { version = "^1.1", optional = true }

# Local deps
lin-reg = { version = "^0.1", path = "../lin-reg" }
rc-plot = { version = "^0.1", path = "../rc-plot", optional = true }

[features]
environments = ["rc-plot"]
load_trade_data = ["csv"]
