[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
nalgebra.workspace = true

# Local deps
lin-reg = { path = "../lin-reg" }
rc-plot = { path = "../rc-plot", optional = true }

[features]
environments = ["rc-plot"]
