[package]
name = "next-generation-rcs-arrayfire"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
pretty_env_logger = "^0.4"
arrayfire = "^3.8"

time_series_generator = "^0.3"

rc-plot = { version = "^0.1", path = "../rc-plot" }