[package]
name = "next-generation-rcs"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
pretty_env_logger = "^0.4"
nalgebra = "^0.31"

# Local deps
lin-reg = { version = "^0.1", path = "../lin-reg" }
common = { version = "^0.1", path = "../common" }

[dev-dependencies]
round = "^0.1"