[package]
name = "next-generation-rcs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
nalgebra.workspace = true

# Local deps
lin-reg = { path = "../lin-reg" }
common = { path = "../common" }

[dev-dependencies]
pretty_env_logger.workspace = true
round = "^0.1"
