[package]
name = "optimizers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
num_cpus = "^1.13"
threadpool = "^1.0"
crossbeam = "^0.8"
nanorand = "^0.7"

# Local deps
common = { path = "../common" }
lin-reg = { path = "../lin-reg" }
