[package]
name = "doublescroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
pretty_env_logger = "^0.4"
nalgebra = "^0.31"
dialoguer = "^0.10"

[[bin]]
name = "doublescroll"
path = "examples/doublescroll/src/main.rs"