[package]
name = "doublescroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
pretty_env_logger = "^0.4"
nalgebra = "^0.31"
dialoguer = "^0.10"
csv = "^1.1"

# Local deps
common = { version = "^0.2", path = "../../common" }
lin-reg = { version = "^0.1", path = "../../lin-reg" }
rc-plot = { version = "^0.1", path = "../../rc-plot" }
classic-rcs = { version = "^0.13", path = "../../classic-rcs" }
next-generation-rcs = { version = "^0.2", path = "../../next-generation-rcs" }

[[bin]]
name = "doublescroll"
path = "src/main.rs"