[package]
name = "doublescroll"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
nalgebra.workspace = true
dialoguer.workspace = true
csv = "1.1"

# Local deps
common = { path = "../../common" }
lin-reg = { path = "../../lin-reg" }
rc-plot = { path = "../../rc-plot" }
classic-rcs = { path = "../../classic-rcs" }
next-generation-rcs = { path = "../../next-generation-rcs" }

[[bin]]
name = "doublescroll"
path = "src/main.rs"
