[package]
name = "mackey_glass"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
nalgebra.workspace = true
dialoguer.workspace = true
nanorand = "^0.7"
time_series_generator = "0.3.1"

# Local deps
common = { path = "../../common", features = ["environments"] }
lin-reg = { path = "../../lin-reg" }
rc-plot = { path = "../../rc-plot" }
classic-rcs = { path = "../../classic-rcs" }
next-generation-rcs = { path = "../../next-generation-rcs" }
