[package]
name = "rc-example-sine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
dialoguer.workspace = true
nalgebra.workspace = true

time_series_generator = "^0.3"

# Local deps
next-generation-rcs = { path = "../../next-generation-rcs" }
classic-rcs = { path = "../../classic-rcs" }
lin-reg = { path = "../../lin-reg" }
rc-plot = { path = "../../rc-plot" }
common = { path = "../../common" }

[[bin]]
name = "sine"
path = "src/main.rs"
