[package]
name = "trades_sliding_window"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
pretty_env_logger = "^0.4"
nalgebra = "^0.31"
dialoguer = "^0.10"

sliding_features = "^2.5"

# Local deps
common = { version = "^0.1", path = "../../common", features = ["environments", "load_trade_data"]}
rc-plot = { version = "^0.1", path = "../../rc-plot" }
lin-reg = { version = "^0.1", path = "../../lin-reg" }
classic-rcs = { version = "^0.13", path = "../../classic-rcs" }